--- a/src/pages/sport_liabry/sport.css
+++ b/src/pages/sport_liabry/sport.css
@@ -1,13 +1,13 @@
-/* :root {
-  --main-bg: #FDFCF3;
+ :root {
+  --main-bg: #fff;
   --accent-bg: linear-gradient(135deg, #61B15A 0%, #ADCE74 100%);
   --text-color: #1E2022;
   --secondary: #ACACAC;
   --primary: #FFCE89;
   --font: 'Roboto', sans-serif;
   --main-color: white;
-} */
-
+} 
+ 
 * {
   box-sizing: border-box;
 }
@@ -35,7 +35,7 @@ input, button, textarea {
   padding-left: 16px;
   font-size: 18px;
   font-weight: 300;
-  background: var(--main-color);
+  background: #f1f1f1;
   height: 60px;
   width: 100%;
   border-radius: 12px;
@@ -53,7 +53,7 @@ input, button, textarea {
   display: inline-grid;
   grid-auto-flow: column;
   column-gap: 15px;
-  background: var(--accent-bg);
+  background: red;
   height: 40px;
   width: 166px;
   justify-content: center;
@@ -64,7 +64,6 @@ input, button, textarea {
 }
 
 .btn--primary {
-  background: var(--primary);
   color: var(--text-color);
 }
 
@@ -448,7 +447,7 @@ input, button, textarea {
   --search-btn-color: #FFF76A;
   width: 100%;
   height: 100%;
-  background: var(--search-btn-color);
+  
 }
 
 @media (max-width: 1024px) {
