--- a/src/pages/plan.css
+++ b/src/pages/plan.css
@@ -1,16 +1,28 @@
 .grid_plan{
     display: grid;
-    grid-template-columns: repeat(3,359px)
+    grid-template-columns: repeat(3,359px);
+    grid-gap: 20px;
 }
 
 .box{
     position: relative;
     width: 300px;
-    height: 300px;
+    height: 200px;
+    border: 1px solid #000;
     
 }
 
 .container{
     margin: 0 auto;
     width: 1140px;
+}
+.text{
+    width: 352px;
+    font-size: 20px;
+}
+
+.data{
+    position: absolute;
+    top: 83px;
+    left: 10px;
 }
